syntax = "proto3";

option  go_package = "github.com/jun06t/grpc-sample/backward-compatibility/proto;helloworld";
package helloworld;

service Greeter {
  rpc SayHello(HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;

  string code  = 2;
  int64  price = 3;
}

message HelloReply {
  string message = 1;
  // Nested nested = 2;
  Renamed renamed = 2;
}

message Nested {
  int64   amount = 1;
  string  name   = 2;
  message Term {
    int64 startAt = 1;
    int64 endAt   = 2;
  }
  Term term = 3;
}

message Renamed {
  int64   amount = 1;
  string  name   = 2;
  message Term {
    int64 startAt = 1;
    int64 endAt   = 2;
  }
  Term term = 3;
}
